--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+/* all tags */
 body {
   color: #40514E;
   margin: 0;
@@ -46,6 +47,7 @@ a:hover {
   color: #EAF6F6;
 }
 
+/* classes used */
 .top-container {
   background-color: #E4F9F5;
   position: relative;
@@ -111,6 +113,7 @@ a:hover {
   float: right;
   margin-left: 30px;
 }
+/* buttons */
 .btn {
   background: #11cdd4;
   background-image: -webkit-linear-gradient(top, #11cdd4, #11999e);
